Add APIs for looking up the analysis status through app-exposer
